优化用户、角色、权限管理逻辑 提取公共方法